feat(backend, frontend): Integración completa de creación de leads y autenticación
🔹 **Backend:**
- Se corrigió la integración con el frontend para el registro de leads.
- Se registró `LeadRoute` en `index.ts` para exponer las rutas de leads en la API.
- Se validó y corrigió el endpoint `POST /api/lead/upsert` para recibir correctamente los datos.
- Se agregaron validaciones en `leadService.ts`:
  - Verificación de formato de email y teléfono.
  - Prevención de duplicados (evita registrar leads con el mismo email).
- Ajustes en la autenticación:
  - Se removió temporalmente `auth` en `leadRoute.ts` para pruebas y se reactivó tras validaciones.
  - `POST /api/lead/upsert` ahora requiere un **token JWT válido**.
- Se confirmó que los leads se guardan correctamente en MongoDB.
- Se verificó que `GET /api/lead/` devuelve correctamente la lista de leads.

📌 **Pendientes:**
- Implementar `GET /api/lead/programs` si se requiere manejar programas desde el backend.

🔹 **Frontend:**
- Se conectó el formulario de leads con el backend y se ajustó la estructura de datos.
- Modificaciones en `LeadForm.tsx`:
  - Se cambió `interestProgram` para enviar el `_id` en lugar del nombre.
  - Se agregó mapeo de programas con `_id` y `name`.
  - Se actualizaron opciones del `Select` para usar los IDs correctos.
- `leadService.ts`:
  - Se actualizó la API a `POST /api/lead/upsert`.
  - Se incluyó el token de autenticación en los headers.
  - Manejo de errores (409 Conflict, 401 Unauthorized).
- `CreateLead.tsx`:
  - Se cambió `createLead` a `upsertLead`.
  - Manejo de errores con alertas en caso de duplicados o problemas de autenticación.
- `authService.ts`:
  - Se agregó `getToken()` para obtener el token de autenticación.

📌 **Resumen de cambios clave:**
1️⃣ El formulario envía datos correctamente estructurados para MongoDB.
2️⃣ El frontend obtiene y envía el token en las peticiones al backend.
3️⃣ Se manejan los errores del backend con mensajes claros en la UI.
4️⃣ Se alinearon las rutas

--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.16.5",
     "@types/ora": "^3.2.0",
     "@types/pdf-parse": "^1.1.4",
+    "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
@@ -52,7 +53,8 @@
     "socket.io": "^4.7.5",
     "tsc-alias": "^1.8.8",
     "twilio": "^4.19.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "validator": "^13.12.0"
   },
   "_moduleAliases": {
     "@app": "src/app",
