--- a/front/package.json
+++ b/front/package.json
@@ -52,6 +52,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
     "react-qr-code": "^2.0.15",
